Bug 489297 - Use Integer.valueOf instead of new Integer in databinding plug-ins
Change-Id: I99bc748893eadc9eb647a1cd0a182b407ee3cde9
Signed-off-by: Lars Vogel <Lars.Vogel@vogella.com>